[package]
name = "tap_log"
version = "0.1.1"
edition = "2024"
description = "A lightweight Rust utility trait for inline logging of values in pipelines, using the tracing crate."
license = "MIT"
repository = "https://github.com/MaxMahem/tap-log"
# documentation = "https://docs.rs/tap-log"
readme = "README.md"
keywords = ["logging", "tracing", "debug", "pipeline", "tap"]
categories = ["development-tools::debugging"]
exclude = [".*", "target"]

[dependencies]
tracing = "0.1.41"

[dev-dependencies]
tracing-subscriber = "0.3.20"




